[gd_scene load_steps=3 format=3 uid="uid://iu7guy4e3ucm"]

[ext_resource type="Script" path="res://Cell.gd" id="1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uhxp4"]
size = Vector2(64, 64)

[node name="Area2D" type="Area2D"]
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_uhxp4")

[node name="ColorRect" type="Panel" parent="."]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2

[node name="Label" type="RichTextLabel" parent="."]
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
scroll_active = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
